bug: images not distorted and no scroll in modal

--- a/public/style.css
+++ b/public/style.css
@@ -121,16 +121,16 @@ small {
 }
 
 #modal.open {
-	height: 500px;
-	width: 50%;
+	/* height: 500px;
+	width: 50%; */
 }
 
 .modalContent {
+	height: 70%;
 	width: 80%;
-	height: 100%;
 	margin: auto;
 	position: relative;
-	top: 10%;
+	top: 20%;
 	background-color: rgba(125, 133, 112, 0);
 	padding-bottom: 18px;
 }
@@ -138,6 +138,8 @@ small {
 .modalImage {
 	margin: auto;
 	width: 100%;
+	margin-top: 25px;
+	margin-bottom: 80px; 
 }
 
 #modalTitle {
